external-crates/move/crates/move-compiler/tests/move_check/parser/named_blocks_invalid.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/named_blocks_invalid.move:3:12
  │
3 │     fun t0(cond: bool): u64 {
  │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/named_blocks_invalid.move:4:13
  │
4 │         name: {
  │             ^
  │             │
  │             Unexpected ':'
  │             Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/named_blocks_invalid.move:4:13
  │
4 │         name: {
  │             ^
  │             │
  │             Unexpected ':'
  │             Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/named_blocks_invalid.move:4:13
  │
3 │     fun t0(cond: bool): u64 {
  │                         --- Expected: 'u64'
4 │         name: {
  │             ^
  │             │
  │             Invalid return expression
  │             Given: '()'

error[E01001]: invalid character
  ┌─ tests/move_check/parser/named_blocks_invalid.move:5:32
  │
5 │             if (cond) { return 'name 10 };
  │                                ^^^^^ Unexpected character (')

